# MNIST_JAX_demo

./: .gitignore  .gitmodules  README.md  clean_demo.ipynb  demo_notebook.ipynb  main.py  main_convnext.py  pyproject.toml
tasks/: task1_architecture_swap.md  task2_scientific_eval.md  task3_data_pipeline.md  task4_uncertainty.md  task5_multispectral.md
