[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.6",
    "jax>=0.9.2",
    "jaxlib>=0.9.2",
    "matplotlib>=3.10.8",
    "optax>=0.2.8",
    "orbax-export>=0.0.8",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.9",
]
